// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaxonomyDropdown Search items 1`] = `
Array [
  <ContextSelectorItem
    className="organizations_clear"
    href={null}
    isDisabled={false}
    key="0"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={1}
      >
        <BuildingIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          style={
            Object {
              "marginRight": "5px",
              "marginTop": "3px",
            }
          }
        />
      </GridItem>
      <GridItem
        span={9}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        Any organization
      </GridItem>
      <GridItem
        span={2}
      />
    </Grid>
  </ContextSelectorItem>,
  <ContextSelectorItem
    className="organization_menuitem"
    href={null}
    id="select_taxonomy_org1"
    isDisabled={true}
    key="1"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={10}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        org1
      </GridItem>
      <GridItem
        span={1}
      >
        <CheckIcon
          className="current-taxonomy-v"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </GridItem>
    </Grid>
  </ContextSelectorItem>,
  <ContextSelectorItem
    className="organization_menuitem"
    href={null}
    id="select_taxonomy_org2"
    isDisabled={false}
    key="2"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={10}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        org2
      </GridItem>
      <GridItem
        span={1}
      />
    </Grid>
  </ContextSelectorItem>,
]
`;

exports[`TaxonomyDropdown Search items 2`] = `
Array [
  <ContextSelectorItem
    className="organizations_clear"
    href={null}
    isDisabled={false}
    key="0"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={1}
      >
        <BuildingIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          style={
            Object {
              "marginRight": "5px",
              "marginTop": "3px",
            }
          }
        />
      </GridItem>
      <GridItem
        span={9}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        Any organization
      </GridItem>
      <GridItem
        span={2}
      />
    </Grid>
  </ContextSelectorItem>,
  <ContextSelectorItem
    className="organization_menuitem"
    href={null}
    id="select_taxonomy_org1"
    isDisabled={true}
    key="1"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={10}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        org1
      </GridItem>
      <GridItem
        span={1}
      >
        <CheckIcon
          className="current-taxonomy-v"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </GridItem>
    </Grid>
  </ContextSelectorItem>,
]
`;

exports[`TaxonomyDropdown rendering rendering 1`] = `
<ContextSelector
  className="context-selector"
  disableFocusTrap={false}
  footer={
    <ContextSelectorFooter>
      <Button
        className="organization"
        component="a"
        href="/organizations"
        isSmall={true}
        variant="secondary"
      >
        Manage Organizations
      </Button>
    </ContextSelectorFooter>
  }
  id="organization-dropdown"
  isOpen={false}
  isPlain={false}
  isText={false}
  menuAppendTo="inline"
  onSearchButtonClick={[Function]}
  onSearchInputChange={[Function]}
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  screenReaderLabel="Selected Taxonomy:"
  searchButtonAriaLabel="Search menu items"
  searchInputPlaceholder="Search"
  searchInputValue=""
  toggleText="org1"
>
  <ContextSelectorItem
    className="organizations_clear"
    href={null}
    isDisabled={false}
    key="0"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={1}
      >
        <BuildingIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          style={
            Object {
              "marginRight": "5px",
              "marginTop": "3px",
            }
          }
        />
      </GridItem>
      <GridItem
        span={9}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        Any organization
      </GridItem>
      <GridItem
        span={2}
      />
    </Grid>
  </ContextSelectorItem>
  <ContextSelectorItem
    className="organization_menuitem"
    href={null}
    id="select_taxonomy_org1"
    isDisabled={true}
    key="1"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={10}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        org1
      </GridItem>
      <GridItem
        span={1}
      >
        <CheckIcon
          className="current-taxonomy-v"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </GridItem>
    </Grid>
  </ContextSelectorItem>
  <ContextSelectorItem
    className="organization_menuitem"
    href={null}
    id="select_taxonomy_org2"
    isDisabled={false}
    key="2"
    onClick={[Function]}
    sendRef={[Function]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={10}
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        org2
      </GridItem>
      <GridItem
        span={1}
      />
    </Grid>
  </ContextSelectorItem>
</ContextSelector>
`;
